Correction du dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,7 +238,7 @@ html, body {
     }
 }
 
-@media (prefers-dark-interface) {
+@media (prefers-color-scheme: dark) {
     #root {
         background: #000;
     }
